--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
-spring.application.name=rabbit-mq
-
-#spring.rabbitmq.host=106.13.39.231
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=tianqingzhao
-#spring.rabbitmq.password=tqz123456789.
+spring.application.name=rabbitmq-demo
 
 #spring.rabbitmq.host=127.0.0.1
 #spring.rabbitmq.port=5672
-#spring.rabbitmq.username=tianqingzhao
-#spring.rabbitmq.password=tqz123456789.
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
